# learnrust-chrome

./: Cargo.toml
configs/: tables.json
src/: config_structs.rs  main.rs
