[package]
name = "chromehist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.26.0"
csv = "1.1.6"
serde = {version = "1.0.136", features = ["derive"]}
chrono = "0.4.19" 
argparse = "0.2.2"
